Fixing reviews not fitting on smaller screens when long links are present in one of them

--- a/rest/compton_styles/steam-reviews.css
+++ b/rest/compton_styles/steam-reviews.css
@@ -13,4 +13,5 @@ pre {
     white-space: break-spaces;
     max-width: 100%;
     overflow: hidden;
+    word-break: break-word;
 }
